AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = udp-receiver udp-sender
udp_receiver_SOURCES = \
    src/options.c \
    src/scheduled-task.c \
    src/udp-receiver.c \
    src/utils.c
udp_sender_SOURCES = \
    src/options.c \
    src/scheduled-task.c \
    src/udp-sender.c \
    src/utils.c
